data/derived/comb/progs/unify/prog5401.ml.out
Characters 77-79:
  | Sine e' -> sin(pi * eval e')
                   ^^
Error: This expression has type float but an expression was expected of type
         int
